src/objects/CventEvents__NominationRule__c.object
<CustomObject>
    <description>Stores the rule of the nomination process configuration.</description>
    <fields>
        <fullName>CventEvents__GroupId__c</fullName>
        <description>Stores the Group Id in case of &apos;Public Group&apos; type.</description>
        <inlineHelpText>Stores the Group Id in case of &apos;Public Group&apos; type.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsSingleApproveSufficient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In case of &apos;Public Group&apos; type indicates whether the single approve sufficient for the entire level.</description>
        <inlineHelpText>In case of &apos;Public Group&apos; type indicates whether the single approve sufficient for the entire level.</inlineHelpText>
        <label>Is Single Approve Sufficient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Level__c</fullName>
        <description>Indicates the Nomination Rule level.</description>
        <inlineHelpText>Indicates the Nomination Rule level.</inlineHelpText>
        <label>Level</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__NominationFilter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Stores Nomination Filter to be applied for the rule.</description>
        <inlineHelpText>Stores Nomination Filter to be applied for the rule.</inlineHelpText>
        <label>Nomination Filter</label>
        <referenceTo>CventEvents__NominationFilter__c</referenceTo>
        <relationshipName>NominationRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__SortOrder__c</fullName>
        <description>Indicates the Nomination Rule order on the level.</description>
        <inlineHelpText>Indicates the Nomination Rule order on the level.</inlineHelpText>
        <label>Sort Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__Type__c</fullName>
        <description>Indicates the Nomination Rule type.</description>
        <inlineHelpText>Indicates the Nomination Rule type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Public Group</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Record Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the User in case of &apos;User&apos; type.</description>
        <inlineHelpText>Stores the User in case of &apos;User&apos; type.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NominationRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Nomination Rule</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__Level__c</columns>
        <columns>CventEvents__SortOrder__c</columns>
        <columns>CventEvents__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NR-{00000000}</displayFormat>
        <label>Nomination Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nomination Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>